--- a/index.html
+++ b/index.html
@@ -33,6 +33,23 @@
 </div>
 
 <div class="pik-slide">
+    <h2>Roadmap</h2>
+
+    <div class="index">
+        <ul>
+            <li>What is OpenSource?</li>
+            <li>The OpenSource Landscape</li>
+            <li>It has great benefits and is no rocket science</li>
+            <li>What can YOU do?</li>
+        </ul>
+    </div>
+    <img src="assets/train.svg"
+         style="position: absolute; right: 1.2em; top: 2.6em; margin-bottom: 2em; margin-right: 0.5em; height: 9em">
+    <img src="assets/opensource-white.svg"
+         style="position: absolute; right: 2.55em; top: 6.85em; opacity: 0.75; margin-bottom: 2em; margin-right: 0.5em; height: 3em">
+</div>
+
+<div class="pik-slide">
     <div class="center">
         <div class="center">
             <h1 class="between-title">Thanks for your attention!</h1>
