--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>OpenSource</title>
-    <script src="../../lib/pik.js"></script>
-    <!-- Important - do not remove or rename! -->
-    <link rel="stylesheet" href="style.css">
-    <!-- Change theme here -->
-    <script type="text/javascript">
-        window.addEvent('domready', function () {
-            document.id('total-slides').set("text", pik.slides.length);
-            document.id('current-slide').set("text", window.parent.pik.getCurrent() + 1);
-        });
-        window.parent.addEvent('hashchange', function () {
-            window.document.id('current-slide').set("text", window.parent.pik.getCurrent() + 1);
-        });
-    </script>
+	<meta charset="utf-8">
+	<title>OpenSource</title>
+	<script src="../../lib/pik.js"></script>
+	<!-- Important - do not remove or rename! -->
+	<link rel="stylesheet" href="style.css">
+	<!-- Change theme here -->
+	<script type="text/javascript">
+		window.addEvent('domready', function () {
+			document.id('total-slides').set("text", pik.slides.length);
+			document.id('current-slide').set("text", window.parent.pik.getCurrent() + 1);
+		});
+		window.parent.addEvent('hashchange', function () {
+			window.document.id('current-slide').set("text", window.parent.pik.getCurrent() + 1);
+		});
+	</script>
 </head>
 <body>
 
@@ -26,46 +26,137 @@
 
 <div id="Pik-presentation-container"> <!-- Important - do not remove or rename! -->
 
-<div class="pik-slide">
-    <div class="center">
-        <div class="center"><img src="assets/opensource.svg" alt="OpenSource" style="height: 22em"></div>
-    </div>
-</div>
+	<div class="pik-slide">
+		<div class="center">
+			<div class="center"><img src="assets/opensource.svg" alt="OpenSource" style="height: 22em"></div>
+		</div>
+	</div>
 
-<div class="pik-slide">
-    <h2>Roadmap</h2>
+	<div class="pik-slide">
+		<h2>Roadmap</h2>
 
-    <div class="index">
-        <ul>
-            <li>What is OpenSource?</li>
-            <li>The OpenSource Landscape</li>
-            <li>It has great benefits and is no rocket science</li>
-            <li>What can YOU do?</li>
-        </ul>
-    </div>
-    <img src="assets/train.svg"
-         style="position: absolute; right: 1.2em; top: 2.6em; margin-bottom: 2em; margin-right: 0.5em; height: 9em">
-    <img src="assets/opensource-white.svg"
-         style="position: absolute; right: 2.55em; top: 6.85em; opacity: 0.75; margin-bottom: 2em; margin-right: 0.5em; height: 3em">
-</div>
+		<div class="index">
+			<ul>
+				<li>What is OpenSource?</li>
+				<li>The OpenSource landscape</li>
+				<li>It has great benefits and is no rocket science</li>
+				<li>What can YOU do?</li>
+			</ul>
+		</div>
+		<img src="assets/train.svg"
+			 style="position: absolute; right: 1.2em; top: 2.6em; margin-bottom: 2em; margin-right: 0.5em; height: 9em">
+		<img src="assets/opensource-white.svg"
+			 style="position: absolute; right: 2.55em; top: 6.85em; opacity: 0.75; margin-bottom: 2em; margin-right: 0.5em; height: 3em">
+	</div>
 
-<div class="pik-slide">
-    <div class="center">
-        <div class="center">
-            <h1 class="between-title">Thanks for your attention!</h1>
-        </div>
-    </div>
-</div>
+	<div class="pik-slide">
+		<div class="center">
+			<div class="center"><img src="assets/opensourcequestion.png" style="height: 23em"></div>
+		</div>
+	</div>
 
-<div id="footer">
-    <table>
-        <tr>
-            <td>11.06.2012</td>
-            <td>Philipp Nowinski</td>
-            <td><span id="current-slide"></span> / <span id="total-slides"></span></td>
-        </tr>
-    </table>
-</div>
+	<div class="pik-slide">
+		<div class="center">
+			<div class="center">
+				<h1 class="between-title">Software consists of two parts</h1>
+			</div>
+		</div>
+	</div>
+
+	<div class="pik-slide">
+		<h2 style="position: absolute;">First part: Sourcecode</h2>
+		<div class="center">
+			<div class="center"><img src="assets/screenshot-sourcecode.png" style="width: 30em; margin-top: 2em"></div>
+		</div>
+	</div>
+
+	<div class="pik-slide">
+		<h2 style="position: absolute;">Second part: Machinecode</h2>
+		<div class="center">
+			<div class="center"><img src="assets/screenshot-compiled.png" style="width: 30em; margin-top: 2em"></div>
+		</div>
+	</div>
+
+	<div class="pik-slide">
+		<h2>What is OpenSource?</h2>
+		<ul>
+			<li>A bunch of software licenses
+				<ul>
+					<li>sourcecode is public and available for everyone</li>
+					<li>license is supposed to encourage further development</li>
+				</ul>
+			</li>
+		</ul>
+	</div>
+
+	<div class="pik-slide">
+		<div class="center">
+			<div class="center"><img src="assets/netscape.png" style="width: 22em"></div>
+		</div>
+	</div>
+
+	<div class="pik-slide">
+		<h2>History</h2>
+		<h3 style="margin-bottom: -1em">1998</h3>
+		<ul>
+			<li>Increasing dominance of Internet Explorer on the browser market</li>
+			<li>Netscape decides to publish the sourcecode of Navigator
+				<ul class="arrow-item">
+					<li>This will become the popular Mozilla Project <img src="assets/mozilla-foundation.png" style="width: 2.9em; position: absolute; margin-left: 0.5em; margin-top: -0.7em"></li>
+				</ul>
+			</li>
+			<li>Bruce Perens and Tim O'Reiley wanted a less idiologic term for the marketing
+				<ul class="arrow-item">
+					<li>They invented the term "OpenSource"</li>
+				</ul>
+			</li>
+		</ul>
+	</div>
+
+	<div class="pik-slide">
+		<div class="center">
+			<div class="center">
+				<h1 class="between-title">The OpenSource landscape</h1>
+			</div>
+		</div>
+	</div>
+
+	<div class="pik-slide">
+		<h2>The OpenSource landscape</h2>
+		<img src="assets/open-source-software/android.svg" style="width: 6em; position: absolute; top: 4em; left: 1em">
+		<img src="assets/open-source-software/firefox.svg" style="width: 6em; position: absolute; top: 7em; left: 10em">
+		<img src="assets/open-source-software/gimp.svg" style="width: 6em; position: absolute; top: 10em; left: 20em">
+		<img src="assets/open-source-software/openoffice.svg" style="width: 10em; position: absolute; top: 5em; left: 19em">
+		<img src="assets/open-source-software/thunderbird.svg" style="width: 6em; position: absolute; top: 15em; left: 4em">
+		<img src="assets/open-source-software/vlc.svg" style="width: 6em; position: absolute; top: 14.5em; left: 17em">
+	</div>
+
+	<div class="pik-slide">
+		<h2>The OpenSource landscape</h2>
+		<img src="assets/open-source-based-projects/facebook.svg" style="width: 8em; position: absolute; top: 4.5em; left: 1.5em">
+		<img src="assets/open-source-based-projects/google.svg" style="width: 8em; position: absolute; top: 5em; left: 20em">
+		<img src="assets/open-source-based-projects/router.svg" style="width: 5em; position: absolute; top: 15em; left: 23em">
+		<img src="assets/open-source-based-projects/twitter.svg" style="width: 9em; position: absolute; top: 10em; left: 10.5em">
+		<img src="assets/open-source-based-projects/wikipedia.svg" style="width: 6em; position: absolute; top: 13em; left: 3em">
+	</div>
+
+	<div class="pik-slide">
+		<div class="center">
+			<div class="center">
+				<h1 class="between-title">Thanks for your attention!</h1>
+			</div>
+		</div>
+	</div>
+
+	<div id="footer">
+		<table>
+			<tr>
+				<td>11.06.2012</td>
+				<td>Philipp Nowinski</td>
+				<td><span id="current-slide"></span> / <span id="total-slides"></span></td>
+			</tr>
+		</table>
+	</div>
 
 </div>
 <!-- End #Pik-presentation-container. Do not remove or rename! -->
