the almighty mac

--- a/index.html
+++ b/index.html
@@ -141,6 +141,13 @@
 	</div>
 
 	<div class="pik-slide">
+		<h2 style="position: absolute;">The OpenSource landscape</h2>
+		<div class="center">
+			<div class="center"><img src="assets/mac.svg" style="width: 17em; margin-top: 1em"></div>
+		</div>
+	</div>
+
+	<div class="pik-slide">
 		<div class="center">
 			<div class="center">
 				<h1 class="between-title">Thanks for your attention!</h1>
