--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<ul>
 				<li>What is OpenSource?</li>
 				<li>The OpenSource landscape</li>
-				<li>It has great benefits and is no rocket science</li>
+				<li>The benefits of OpenSource</li>
 				<li>What can YOU do?</li>
 			</ul>
 		</div>
@@ -83,6 +83,7 @@
 			<li>A bunch of software licenses
 				<ul>
 					<li>sourcecode is public and available for everyone</li>
+					<li>everyone has the opportunity of reading and modifying the sourcecode</li>
 					<li>license is supposed to encourage further development</li>
 				</ul>
 			</li>
@@ -144,6 +145,42 @@
 		<h2 style="position: absolute;">The OpenSource landscape</h2>
 		<div class="center">
 			<div class="center"><img src="assets/mac.svg" style="width: 17em; margin-top: 1em"></div>
+		</div>
+	</div>
+
+	<div class="pik-slide">
+		<div class="center">
+			<div class="center">
+				<h1 class="between-title">What's in for you?</h1>
+			</div>
+		</div>
+	</div>
+
+	<div class="pik-slide">
+		<h2>It has benefits...</h2>
+		<p>Why would one use OpenSource instead of proprietary software?</p>
+	</div>
+
+	<div class="pik-slide">
+		<h2>The benefits of OpenSource</h2>
+		<p>Why would one use OpenSource instead of proprietary software?</p>
+		<ul>
+			<li>Most OpenSource software will cost you no money<img src="assets/money.png" style="position: absolute; height: 2em; margin-left: 0.5em"></li>
+			<li>Encountered bugs? Missing a feature?
+				<ul class="arrow-item" style="font-weight: normal;">
+					<li>Report to the community or the developer team</li>
+				</ul>
+			</li>
+			<li>OpenSource Software is more secure</li>
+			<li>OpenSource Software triggers innovation</li>
+		</ul>
+	</div>
+
+	<div class="pik-slide">
+		<div class="center" style="background-image: url(assets/unclesam.svg); background-repeat: no-repeat; background-position: center; background-size: 16em">
+			<div class="center">
+				<h1 class="between-title" style="opacity: 0.8">What can YOU do?</h1>
+			</div>
 		</div>
 	</div>
 
