benefits + uncle sam + fuckin opencola

--- a/index.html
+++ b/index.html
@@ -26,181 +26,255 @@
 
 <div id="Pik-presentation-container"> <!-- Important - do not remove or rename! -->
 
-	<div class="pik-slide">
+<div class="pik-slide">
+	<div class="center">
+		<div class="center"><img src="assets/opensource.svg" alt="OpenSource" style="height: 22em"></div>
+	</div>
+</div>
+
+<div class="pik-slide">
+	<h2>Roadmap</h2>
+
+	<div class="index">
+		<ul>
+			<li>What is OpenSource?</li>
+			<li>The OpenSource landscape</li>
+			<li>The benefits of OpenSource</li>
+			<li>What can YOU do?</li>
+		</ul>
+	</div>
+	<img src="assets/train.svg"
+		 style="position: absolute; right: 1.2em; top: 2.6em; margin-bottom: 2em; margin-right: 0.5em; height: 9em">
+	<img src="assets/opensource-white.svg"
+		 style="position: absolute; right: 2.55em; top: 6.85em; opacity: 0.75; margin-bottom: 2em; margin-right: 0.5em; height: 3em">
+</div>
+
+<div class="pik-slide">
+	<div class="center">
+		<div class="center"><img src="assets/opensourcequestion.png" style="height: 23em"></div>
+	</div>
+</div>
+
+<div class="pik-slide">
+	<div class="center">
 		<div class="center">
-			<div class="center"><img src="assets/opensource.svg" alt="OpenSource" style="height: 22em"></div>
+			<h1 class="between-title">Software consists of two parts</h1>
 		</div>
 	</div>
+</div>
 
-	<div class="pik-slide">
-		<h2>Roadmap</h2>
+<div class="pik-slide">
+	<h2 style="position: absolute;">First part: Sourcecode</h2>
 
-		<div class="index">
+	<div class="center">
+		<div class="center"><img src="assets/screenshot-sourcecode.png" style="width: 30em; margin-top: 2em"></div>
+	</div>
+</div>
+
+<div class="pik-slide">
+	<h2 style="position: absolute;">Second part: Machinecode</h2>
+
+	<div class="center">
+		<div class="center"><img src="assets/screenshot-compiled.png" style="width: 30em; margin-top: 2em"></div>
+	</div>
+</div>
+
+<div class="pik-slide">
+	<h2>What is OpenSource?</h2>
+	<ul>
+		<li>A bunch of software licenses
 			<ul>
-				<li>What is OpenSource?</li>
-				<li>The OpenSource landscape</li>
-				<li>The benefits of OpenSource</li>
-				<li>What can YOU do?</li>
+				<li>sourcecode is public and available for everyone</li>
+				<li>everyone has the opportunity of reading and modifying the sourcecode</li>
+				<li>license is supposed to encourage further development</li>
 			</ul>
-		</div>
-		<img src="assets/train.svg"
-			 style="position: absolute; right: 1.2em; top: 2.6em; margin-bottom: 2em; margin-right: 0.5em; height: 9em">
-		<img src="assets/opensource-white.svg"
-			 style="position: absolute; right: 2.55em; top: 6.85em; opacity: 0.75; margin-bottom: 2em; margin-right: 0.5em; height: 3em">
-	</div>
+		</li>
+	</ul>
+</div>
 
-	<div class="pik-slide">
+<div class="pik-slide">
+	<div class="center">
+		<div class="center"><img src="assets/netscape.png" style="width: 22em"></div>
+	</div>
+</div>
+
+<div class="pik-slide">
+	<h2>History</h2>
+
+	<h3 style="margin-bottom: -1em">1998</h3>
+	<ul>
+		<li>Increasing dominance of Internet Explorer on the browser market</li>
+		<li>Netscape decides to publish the sourcecode of Navigator
+			<ul class="arrow-item">
+				<li>This will become the popular Mozilla Project <img src="assets/mozilla-foundation.png"
+																	  style="width: 2.9em; position: absolute; margin-left: 0.5em; margin-top: -0.7em">
+				</li>
+			</ul>
+		</li>
+		<li>Bruce Perens and Tim O'Reiley wanted a less idiologic term for the marketing
+			<ul class="arrow-item">
+				<li>They invented the term "OpenSource"</li>
+			</ul>
+		</li>
+	</ul>
+</div>
+
+<div class="pik-slide">
+	<div class="center">
 		<div class="center">
-			<div class="center"><img src="assets/opensourcequestion.png" style="height: 23em"></div>
+			<h1 class="between-title">The OpenSource landscape</h1>
 		</div>
 	</div>
+</div>
 
-	<div class="pik-slide">
+<div class="pik-slide">
+	<h2>The OpenSource landscape</h2>
+	<img src="assets/open-source-software/android.svg" style="width: 6em; position: absolute; top: 4em; left: 1em">
+	<img src="assets/open-source-software/firefox.svg" style="width: 6em; position: absolute; top: 7em; left: 10em">
+	<img src="assets/open-source-software/gimp.svg" style="width: 6em; position: absolute; top: 10em; left: 20em">
+	<img src="assets/open-source-software/openoffice.svg"
+		 style="width: 10em; position: absolute; top: 5em; left: 19em">
+	<img src="assets/open-source-software/thunderbird.svg"
+		 style="width: 6em; position: absolute; top: 15em; left: 4em">
+	<img src="assets/open-source-software/vlc.svg" style="width: 6em; position: absolute; top: 14.5em; left: 17em">
+</div>
+
+<div class="pik-slide">
+	<h2>The OpenSource landscape</h2>
+	<img src="assets/open-source-based-projects/facebook.svg"
+		 style="width: 8em; position: absolute; top: 4.5em; left: 1.5em">
+	<img src="assets/open-source-based-projects/google.svg"
+		 style="width: 8em; position: absolute; top: 5em; left: 20em">
+	<img src="assets/open-source-based-projects/router.svg"
+		 style="width: 5em; position: absolute; top: 15em; left: 23em">
+	<img src="assets/open-source-based-projects/twitter.svg"
+		 style="width: 9em; position: absolute; top: 10em; left: 10.5em">
+	<img src="assets/open-source-based-projects/wikipedia.svg"
+		 style="width: 6em; position: absolute; top: 13em; left: 3em">
+</div>
+
+<div class="pik-slide">
+	<h2 style="position: absolute;">The OpenSource landscape</h2>
+
+	<div class="center">
+		<div class="center"><img src="assets/mac.svg" style="width: 17em; margin-top: 1em"></div>
+	</div>
+</div>
+
+<div class="pik-slide">
+	<div class="center">
 		<div class="center">
-			<div class="center">
-				<h1 class="between-title">Software consists of two parts</h1>
-			</div>
+			<h1 class="between-title">What's in for you?</h1>
 		</div>
 	</div>
+</div>
 
-	<div class="pik-slide">
-		<h2 style="position: absolute;">First part: Sourcecode</h2>
+<div class="pik-slide">
+	<h2>It has benefits...</h2>
+
+	<p>Why would one use OpenSource instead of proprietary software?</p>
+</div>
+
+<div class="pik-slide">
+	<h2>The benefits of OpenSource</h2>
+
+	<p>Why would one use OpenSource instead of proprietary software?</p>
+	<ul>
+		<li>Most OpenSource software will cost you no money<img src="assets/money.png"
+																style="position: absolute; height: 2em; margin-left: 0.5em">
+		</li>
+		<li>Encountered bugs? Missing a feature?
+			<ul class="arrow-item" style="font-weight: normal;">
+				<li>Report to the community or the developer team</li>
+			</ul>
+		</li>
+		<li>OpenSource Software is more secure</li>
+		<li>OpenSource Software triggers innovation</li>
+	</ul>
+</div>
+
+<div class="pik-slide">
+	<div class="center"
+		 style="background-image: url(assets/unclesam.svg); background-repeat: no-repeat; background-position: center; background-size: 16em">
 		<div class="center">
-			<div class="center"><img src="assets/screenshot-sourcecode.png" style="width: 30em; margin-top: 2em"></div>
+			<h1 class="between-title" style="opacity: 0.8">What can YOU do?</h1>
 		</div>
 	</div>
+</div>
 
-	<div class="pik-slide">
-		<h2 style="position: absolute;">Second part: Machinecode</h2>
+<div class="pik-slide">
+	<h2>What can YOU do?</h2>
+	<ul>
+		<li>The most simple thing:
+			<ul class="arrow-item">
+				<li>contribute to OpenSource projects</li>
+			</ul>
+		</li>
+		<li>Most projects are looking for testers and translators on a regular basis</li>
+	</ul>
+</div>
+
+<div class="pik-slide">
+	<h2>What can YOU do?</h2>
+	<ul>
+		<li>The concept of OpenSource is portable
+			<ul>
+				<li>OpenAccess, OpenData
+					<div style="font-size: smaller; color: #666666; margin-top: -0.5em">Access to all kind of documents
+						and information
+					</div>
+				</li>
+			</ul>
+		</li>
+		<li>Share your stuff; researches, papers, essays, etc...
+			<ul class="arrow-item">
+				<li>There might be someone out there who is going to<br><span>&nbsp;</span>build something great upon it
+				</li>
+			</ul>
+		</li>
+	</ul>
+</div>
+
+<div class="pik-slide">
+	<h2 style="position: absolute;">There are no limits...</h2>
+	<div class="center">
+		<div class="center"><img src="assets/opencola.png" style="width: 10em; margin-top: 2.5em"></div>
+	</div>
+</div>
+
+<div class="pik-slide">
+	<h2>OpenCola concentrate recipe</h2>
+	<ul>
+		<li>2.36&nbsp;kg plain granulated white table <a href="/wiki/Sugar" title="Sugar">sugar</a></li>
+		<li>2.28 L water</li>
+		<li>30.0&nbsp;mL <a href="/wiki/Caramel_coloring" title="Caramel coloring" class="mw-redirect">caramel color</a></li>
+		<li>17.5&nbsp;mL (3.50 <a href="/wiki/Teaspoon" title="Teaspoon">tsp.</a>) 75% <a href="/wiki/Phosphoric_acid" title="Phosphoric acid">phosphoric acid</a> or <a href="/wiki/Citric_acid" title="Citric acid">citric acid</a></li>
+		<li>10.0&nbsp;mL (2.00 tsp.) flavoring formula</li>
+		<li>2.50&nbsp;mL (0.50 tsp.) <a href="/wiki/Caffeine" title="Caffeine">caffeine</a> (optional)<sup id="cite_ref-recipe_1-1" class="reference"><a href="#cite_note-recipe-1"><span>[</span>2<span>]</span></a></sup><sup id="cite_ref-Soft_Drink_Formula_2-1" class="reference"><a href="#cite_note-Soft_Drink_Formula-2"><span>[</span>3<span>]</span></a></sup></li>
+	</ul>
+</div>
+
+<div class="pik-slide">
+	<h2>Sources</h2>
+</div>
+
+<div class="pik-slide">
+	<div class="center">
 		<div class="center">
-			<div class="center"><img src="assets/screenshot-compiled.png" style="width: 30em; margin-top: 2em"></div>
+			<h1 class="between-title">Thanks for your attention!</h1>
 		</div>
 	</div>
+</div>
 
-	<div class="pik-slide">
-		<h2>What is OpenSource?</h2>
-		<ul>
-			<li>A bunch of software licenses
-				<ul>
-					<li>sourcecode is public and available for everyone</li>
-					<li>everyone has the opportunity of reading and modifying the sourcecode</li>
-					<li>license is supposed to encourage further development</li>
-				</ul>
-			</li>
-		</ul>
-	</div>
-
-	<div class="pik-slide">
-		<div class="center">
-			<div class="center"><img src="assets/netscape.png" style="width: 22em"></div>
-		</div>
-	</div>
-
-	<div class="pik-slide">
-		<h2>History</h2>
-		<h3 style="margin-bottom: -1em">1998</h3>
-		<ul>
-			<li>Increasing dominance of Internet Explorer on the browser market</li>
-			<li>Netscape decides to publish the sourcecode of Navigator
-				<ul class="arrow-item">
-					<li>This will become the popular Mozilla Project <img src="assets/mozilla-foundation.png" style="width: 2.9em; position: absolute; margin-left: 0.5em; margin-top: -0.7em"></li>
-				</ul>
-			</li>
-			<li>Bruce Perens and Tim O'Reiley wanted a less idiologic term for the marketing
-				<ul class="arrow-item">
-					<li>They invented the term "OpenSource"</li>
-				</ul>
-			</li>
-		</ul>
-	</div>
-
-	<div class="pik-slide">
-		<div class="center">
-			<div class="center">
-				<h1 class="between-title">The OpenSource landscape</h1>
-			</div>
-		</div>
-	</div>
-
-	<div class="pik-slide">
-		<h2>The OpenSource landscape</h2>
-		<img src="assets/open-source-software/android.svg" style="width: 6em; position: absolute; top: 4em; left: 1em">
-		<img src="assets/open-source-software/firefox.svg" style="width: 6em; position: absolute; top: 7em; left: 10em">
-		<img src="assets/open-source-software/gimp.svg" style="width: 6em; position: absolute; top: 10em; left: 20em">
-		<img src="assets/open-source-software/openoffice.svg" style="width: 10em; position: absolute; top: 5em; left: 19em">
-		<img src="assets/open-source-software/thunderbird.svg" style="width: 6em; position: absolute; top: 15em; left: 4em">
-		<img src="assets/open-source-software/vlc.svg" style="width: 6em; position: absolute; top: 14.5em; left: 17em">
-	</div>
-
-	<div class="pik-slide">
-		<h2>The OpenSource landscape</h2>
-		<img src="assets/open-source-based-projects/facebook.svg" style="width: 8em; position: absolute; top: 4.5em; left: 1.5em">
-		<img src="assets/open-source-based-projects/google.svg" style="width: 8em; position: absolute; top: 5em; left: 20em">
-		<img src="assets/open-source-based-projects/router.svg" style="width: 5em; position: absolute; top: 15em; left: 23em">
-		<img src="assets/open-source-based-projects/twitter.svg" style="width: 9em; position: absolute; top: 10em; left: 10.5em">
-		<img src="assets/open-source-based-projects/wikipedia.svg" style="width: 6em; position: absolute; top: 13em; left: 3em">
-	</div>
-
-	<div class="pik-slide">
-		<h2 style="position: absolute;">The OpenSource landscape</h2>
-		<div class="center">
-			<div class="center"><img src="assets/mac.svg" style="width: 17em; margin-top: 1em"></div>
-		</div>
-	</div>
-
-	<div class="pik-slide">
-		<div class="center">
-			<div class="center">
-				<h1 class="between-title">What's in for you?</h1>
-			</div>
-		</div>
-	</div>
-
-	<div class="pik-slide">
-		<h2>It has benefits...</h2>
-		<p>Why would one use OpenSource instead of proprietary software?</p>
-	</div>
-
-	<div class="pik-slide">
-		<h2>The benefits of OpenSource</h2>
-		<p>Why would one use OpenSource instead of proprietary software?</p>
-		<ul>
-			<li>Most OpenSource software will cost you no money<img src="assets/money.png" style="position: absolute; height: 2em; margin-left: 0.5em"></li>
-			<li>Encountered bugs? Missing a feature?
-				<ul class="arrow-item" style="font-weight: normal;">
-					<li>Report to the community or the developer team</li>
-				</ul>
-			</li>
-			<li>OpenSource Software is more secure</li>
-			<li>OpenSource Software triggers innovation</li>
-		</ul>
-	</div>
-
-	<div class="pik-slide">
-		<div class="center" style="background-image: url(assets/unclesam.svg); background-repeat: no-repeat; background-position: center; background-size: 16em">
-			<div class="center">
-				<h1 class="between-title" style="opacity: 0.8">What can YOU do?</h1>
-			</div>
-		</div>
-	</div>
-
-	<div class="pik-slide">
-		<div class="center">
-			<div class="center">
-				<h1 class="between-title">Thanks for your attention!</h1>
-			</div>
-		</div>
-	</div>
-
-	<div id="footer">
-		<table>
-			<tr>
-				<td>11.06.2012</td>
-				<td>Philipp Nowinski</td>
-				<td><span id="current-slide"></span> / <span id="total-slides"></span></td>
-			</tr>
-		</table>
-	</div>
+<div id="footer">
+	<table>
+		<tr>
+			<td>11.06.2012</td>
+			<td>Philipp Nowinski</td>
+			<td><span id="current-slide"></span> / <span id="total-slides"></span></td>
+		</tr>
+	</table>
+</div>
 
 </div>
 <!-- End #Pik-presentation-container. Do not remove or rename! -->
