--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
 <div class="pik-slide">
 	<div class="center">
 		<div class="center">
-			<h1 class="between-title">What's in for you?</h1>
+			<h1 class="between-title">What's in it for you?</h1>
 		</div>
 	</div>
 </div>
 
 <div class="pik-slide">
-	<h2>It has benefits...</h2>
+	<h2>The benefits of OpenSource</h2>
 
 	<p>Why would one use OpenSource instead of proprietary software?</p>
 </div>
@@ -180,8 +180,7 @@
 
 	<p>Why would one use OpenSource instead of proprietary software?</p>
 	<ul>
-		<li>Most OpenSource software will cost you no money<img src="assets/money.png"
-																style="position: absolute; height: 2em; margin-left: 0.5em">
+		<li>Most OpenSource software will cost you no money<img src="assets/money.png" style="position: absolute; height: 2em; margin-left: 0.5em">
 		</li>
 		<li>Encountered bugs? Missing a feature?
 			<ul class="arrow-item" style="font-weight: normal;">
@@ -250,7 +249,7 @@
 		<li>30.0&nbsp;mL <a href="/wiki/Caramel_coloring" title="Caramel coloring" class="mw-redirect">caramel color</a></li>
 		<li>17.5&nbsp;mL (3.50 <a href="/wiki/Teaspoon" title="Teaspoon">tsp.</a>) 75% <a href="/wiki/Phosphoric_acid" title="Phosphoric acid">phosphoric acid</a> or <a href="/wiki/Citric_acid" title="Citric acid">citric acid</a></li>
 		<li>10.0&nbsp;mL (2.00 tsp.) flavoring formula</li>
-		<li>2.50&nbsp;mL (0.50 tsp.) <a href="/wiki/Caffeine" title="Caffeine">caffeine</a> (optional)<sup id="cite_ref-recipe_1-1" class="reference"><a href="#cite_note-recipe-1"><span>[</span>2<span>]</span></a></sup><sup id="cite_ref-Soft_Drink_Formula_2-1" class="reference"><a href="#cite_note-Soft_Drink_Formula-2"><span>[</span>3<span>]</span></a></sup></li>
+		<li>2.50&nbsp;mL (0.50 tsp.) <a href="/wiki/Caffeine" title="Caffeine">caffeine</a> (optional)</li>
 	</ul>
 </div>
 
