--- a/index.html
+++ b/index.html
@@ -255,6 +255,16 @@
 
 <div class="pik-slide">
 	<h2>Sources</h2>
+	<ul>
+		<li><a href="http://de.wikipedia.org/wiki/Open_Source">http://de.wikipedia.org/wiki/Open_Source</a></li>
+		<li><a href="http://blog.wohlrapp.com/open-source-faq/">http://blog.wohlrapp.com/open-source-faq/</a></li>
+		<li><a href="http://www.youtube.com/watch?v=5XDTQLa3NjE">Keynote - Karen Sandler @ linux.conf.au - YouTube</a></li>
+		<li><a href="http://www.clker.com/">http://www.clker.com/</a> - Vectorgraphics</li>
+	</ul>
+	<p style="margin-left: 1em; font-size: 0.8em; font-weight: bold;">This presentation was created exclusively with OpenSource software</p>
+	<ul class="arrow-item">
+		<li><a href="https://github.com/kaesetoast/OpenSourceTalkEnglish">https://github.com/kaesetoast/OpenSourceTalkEnglish</a></li>
+	</ul>
 </div>
 
 <div class="pik-slide">
