--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<li>What is OpenSource?</li>
 			<li>The OpenSource landscape</li>
 			<li>The benefits of OpenSource</li>
-			<li>What can YOU do?</li>
+			<li>OpenSource needs YOU!</li>
 		</ul>
 	</div>
 	<img src="assets/train.svg"
@@ -106,14 +106,8 @@
 		<li>Increasing dominance of Internet Explorer on the browser market</li>
 		<li>Netscape decides to publish the sourcecode of Navigator
 			<ul class="arrow-item">
-				<li>This will become the popular Mozilla Project <img src="assets/mozilla-foundation.png"
-																	  style="width: 2.9em; position: absolute; margin-left: 0.5em; margin-top: -0.7em">
+				<li>this resulted in the popular Mozilla Project <img src="assets/mozilla-foundation.png" style="width: 2.9em; position: absolute; margin-left: 0.5em; margin-top: -0.7em">
 				</li>
-			</ul>
-		</li>
-		<li>Bruce Perens and Tim O'Reiley wanted a less idiologic term for the marketing
-			<ul class="arrow-item">
-				<li>They invented the term "OpenSource"</li>
 			</ul>
 		</li>
 	</ul>
@@ -142,23 +136,13 @@
 <div class="pik-slide">
 	<h2>The OpenSource landscape</h2>
 	<img src="assets/open-source-based-projects/facebook.svg"
-		 style="width: 8em; position: absolute; top: 4.5em; left: 1.5em">
+		 style="width: 8em; position: absolute; top: 5em; left: 1.5em">
 	<img src="assets/open-source-based-projects/google.svg"
 		 style="width: 8em; position: absolute; top: 5em; left: 20em">
-	<img src="assets/open-source-based-projects/router.svg"
-		 style="width: 5em; position: absolute; top: 15em; left: 23em">
 	<img src="assets/open-source-based-projects/twitter.svg"
-		 style="width: 9em; position: absolute; top: 10em; left: 10.5em">
+		 style="width: 9em; position: absolute; top: 16em; left: 19em">
 	<img src="assets/open-source-based-projects/wikipedia.svg"
 		 style="width: 6em; position: absolute; top: 13em; left: 3em">
-</div>
-
-<div class="pik-slide">
-	<h2 style="position: absolute;">The OpenSource landscape</h2>
-
-	<div class="center">
-		<div class="center"><img src="assets/mac.svg" style="width: 17em; margin-top: 1em"></div>
-	</div>
 </div>
 
 <div class="pik-slide">
@@ -184,7 +168,7 @@
 		</li>
 		<li>Encountered bugs? Missing a feature?
 			<ul class="arrow-item" style="font-weight: normal;">
-				<li>Report to the community or the developer team</li>
+				<li>report to the community or the developer team</li>
 			</ul>
 		</li>
 		<li>OpenSource Software is more secure</li>
@@ -196,7 +180,7 @@
 	<div class="center"
 		 style="background-image: url(assets/unclesam.svg); background-repeat: no-repeat; background-position: center; background-size: 16em">
 		<div class="center">
-			<h1 class="between-title" style="opacity: 0.8">What can YOU do?</h1>
+			<h1 class="between-title" style="opacity: 0.8">OpenSource needs YOU!</h1>
 		</div>
 	</div>
 </div>
@@ -227,7 +211,7 @@
 		</li>
 		<li>Share your stuff; researches, papers, essays, etc...
 			<ul class="arrow-item">
-				<li>There might be someone out there who is going to<br><span>&nbsp;</span>build something great upon it
+				<li>there might be someone out there who is going to<br><span>&nbsp;</span>build something great upon it
 				</li>
 			</ul>
 		</li>
